# Render

./: .gitignore  CMakeLists.txt  README.md  t.txt
src/: main.cpp
src/MathObjects/: line.h  ray.cpp  ray.h  utils.cpp  utils.h  vector.cpp  vector.h
src/RenderObjects/: baseObject.h  objects.cpp  objects.h  renderController.cpp  renderController.h
